--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="services-list">
 
-            <li class="services-item-1">
+            <li class="services-item">
                 <b class="advantages-title-living">Жилье</b>
               <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
-            <li class="services-item-2">
+            <li class="services-item">
                 <b class="advantages-title-food">Еда</b>
               <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
-            <li class="services-item-3">
+            <li class="services-item">
                 <b class="advantages-title-souvenirs">Сувениры</b>
               <p>Не только китайского, но и настоящего местного производства!</p>
             </li>
@@ -135,20 +135,19 @@
 
       <!-- Форма поиска конец  -->
 
-      <section class="subscribe">
-        <form action="https://echo.htmlacademy.ru">
+    <section class="subscribe">
+      <form action="https://echo.htmlacademy.ru">
         <div class="subscribe-form">
-          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-          <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-          <input type="email" placeholder="Ваш e-mail" name="email"><button class="button" type="submit">Подписаться</button>
+      <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <input type="email" placeholder="Ваш e-mail" name="email"><button type="submit">Подписаться</button>
         </div>
-        </form>
-      </section>
+      </form>
+    </section>
     </main>
-
       <!-- Форма почты конец -->
 
-      <footer>
+      <footer class="page-footer">
         <section class="footer-social">
           <ul class="footer-social-list">
             <li class="footer-social-item-vk">
