--- a/catalog.html
+++ b/catalog.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
  <html lang="ru">
+
   <head>
     <meta charset="utf-8">
      <link rel="stylesheet" href="styles/style.css">
+     <title>Sedona</title>
   </head>
 
 <!-- Конец шапки -->
@@ -10,8 +12,7 @@
   <body>
     <div class="page-container">
    <header class="page-header">
-    <a href="#">
-      <img src="images/logo.svg" height="55" width="67" alt="Логотип.">
+    <a href="#"><img src="images/logo.svg" height="55" width="67" alt="Логотип.">
     </a>
 
 <!-- Начало навигации -->
@@ -51,7 +52,7 @@
   </li>
 
   <li class="navigation-item-buttons">
-    <button type="button">Хочу сюда!</button>
+    <button class="appointment-button" type="button">Хочу сюда!</button>
   </li>
 </ul>
 </nav>
@@ -59,41 +60,46 @@
 
 <!-- Конец хедера -->
 
-        <main>
-        <h1>Гостиницы Седоны</h1>
-         <ul class="navigation-list">
-          <li class="home" href="index.html"></li>
-         <li class="navigation-link" href="catalog.html">Гостиницы</li>
-         </ul>
+<main>
+  <section class="filter">
+    <h1 class="page-title">Гостиницы Седоны</h1>
+    <ul class="breadcrumbs-list">
+      <li class="breadcrumbs-item home">
+        <a href="index.html" class="breadcrumbs-link">
+          <span class="visually-hidden">Главная</span>
+        </a>
+      </li>
+      <li class="breadcrumbs-item">
+        Гостиницы
+      </li>
+    </ul>
 
 <!-- Поиск начало -->
 
           <form class="form-filter" action="https://echo.htmlacademy.ru">
            <div class="services-catalog">
-            <div>
             <p>Инфраструктура</p>
-             <input type="checkbox" name="pool" id="pool" checked><label for="name">Бассейн</label>
-             <input type="checkbox" name="parking" id="parking"><label for="name">Парковка</label>
-             <input type="checkbox" name="wifi" id="wifi"><label for="name">Wi-Fi</label>
-          </div><br>
+             <input type="checkbox" name="pool" id="pool" checked><label for="pool">Бассейн</label>
+             <input type="checkbox" name="parking" id="parking"><label for="parking">Парковка</label>
+             <input type="checkbox" name="wifi" id="wifi"><label for="wifi">Wi-Fi</label>
+          </div>
           <div>
             <p>Тип Жилья:</p>
-             <input type="radio" name="house-type" id="hotel" checked><label for="hotel">Гостиница</label>
-             <input type="radio" name="house-type" id="motel"><label for="motel">Мотель</label>
-             <input type="radio" name="house-type" id="apartaments"><label for="apartaments">Апартаменты</label>
-            </div><br>
+             <input type="radio" name="house-type" value="hotel" id="hotel" checked><label for="hotel">Гостиница</label>
+             <input type="radio" name="house-type" value="motel" id="motel"><label for="motel">Мотель</label>
+             <input type="radio" name="house-type" value="apartaments" id="apartaments"><label for="apartaments">Апартаменты</label>
+            </div>
             <div>
             <p>Стоимость,₽</p>
-             <input type="number" name="appointment-price-from" id="appointment-task-from">от<label for="от">
-             <input type="number" name="appointment-price-to" id="appointment-task-to">до<label for ="до">
+             <input type="number" name="appointment-price-from" id="appointment-task-from"><label for="appointment-task-from">от</label>
+             <input type="number" name="appointment-price-to" id="appointment-task-to"><label for="appointment-task-to">до</label>
              <input type="range">
            </div>
             <div>
-             <button type="submit">применить</button>
-             <button type="reset">сбросить</button>
-            </div>
+             <button class="button-blue" type="submit">применить</button>
+             <button class="reset-button" type="reset">сбросить</button>
+           </div>
           </form>
-          </section>
 
 <!-- Поиск конец формы -->
 
@@ -105,7 +111,7 @@
           <option value="2">Сначала дешевые</option>
           <option value="3">Сначала дорогое</option>
         </select>
-          <ul>
+          <ul class="views">
           <li>
             <a href="#" сlass="catalog-view-table">
               <span class="visually-hidden">Плитка</span>
@@ -127,12 +133,12 @@
 
 <!-- Список гостиниц -->
 
-          <section>
+          <section class="pages">
        <h2 class="visually-hidden">Список страниц</h2>
       <ul class="catalog-list">
       <li class="hotel-card-1">
-
-       <a href="#"><div>
+       <a href="#">
+        <div>
         <img src="images/hotel-1.jpg" width="300" height="212" alt="Пейзаж.">
       </div>
       <div><h3>Amara Resort & Spa</h3></div>
@@ -180,12 +186,12 @@
       </a>
         <p>Гостиница</p><p>От 1500 ₽</p>
         <a href="#" class="button-brown">Подробнее</a>
-          <a href="#" class="button-blue">В избранное</a>
+        <a href="#" class="button-blue">В избранное</a>
          <p>Рейтинг:5,0</p>
          <img src="images/star-3.svg"><img src="images/star-3.svg">
         </li>
-
         </ul>
+
          <ul class="pagination">
         <li><a href="#">1</a></li>
         <li><a href="#">2</a></li>
@@ -203,7 +209,7 @@
       <div class="subscribe-form">
     <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
       <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-      <input type="email" placeholder="Ваш e-mail" name="email"><button type="submit">Подписаться</button>
+      <input type="email" placeholder="Ваш e-mail" name="email"><button class="button-blue" type="submit">Подписаться</button>
       </div>
     </form>
   </section>
@@ -212,7 +218,6 @@
 <!-- Начало социальные сети -->
 
 <footer class="page-footer">
-  <div class="page-container">
   <section class="footer-social">
     <ul class="footer-social-list">
       <li class="footer-social-item-vk">
