--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/style.css">
+    <title>Sedona-гостиницы</title>
   </head>
 
   <!-- Конец шапки -->
@@ -50,7 +51,7 @@
           </li>
 
           <li class="navigation-item-buttons">
-            <button type="button">Хочу сюда!</button>
+            <button class="appointment-button" type="button">Хочу сюда!</button>
           </li>
         </ul>
       </nav>
@@ -62,7 +63,7 @@
         <img src="images/welcome.svg" width="458" height="352" alt="welcome">
         <div class="divider">
           <h1 class="title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <p class="subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         </div>
       </div>
     </section>
@@ -101,12 +102,8 @@
           </ul>
 
           <section class="services">
-            <div class="title">
-            <h2 class="services-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-            </div>
-            <div class="subtitle">
-            <p class="services-description">Опытный персонал и качественное обслуживание!</p>
-            </div>
+            <h2 class="services-title title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+            <p class="services-description subtitle">Опытный персонал и качественное обслуживание!</p>
           </section>
         </section>
 
@@ -134,13 +131,9 @@
       <!-- Конец раздела с преимуществами -->
 
       <section class="appointment">
-        <div class="title">
-        <h2 class="appointment-date">Заинтересовались?</h2>
-        </div>
-        <div class="subtitle">
-        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        </div>
-        <button type="button" id="search">Поиск гостиницы в Седоне</button>
+        <h2 class="appointment-date title">Заинтересовались?</h2>
+        <p class="subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button class="button-brown" type="button" id="search">Поиск гостиницы в Седоне</button>
       </section>
 
       <!-- Форма поиска конец  -->
@@ -149,8 +142,8 @@
       <form action="https://echo.htmlacademy.ru">
         <div class="subscribe-form">
       <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <input type="email" placeholder="Ваш e-mail" name="email"><button type="submit">Подписаться</button>
+        <p class="subtitle">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <input type="email" placeholder="Ваш e-mail" name="email"><button class="button-blue" type="submit">Подписаться</button>
         </div>
       </form>
      </section>
@@ -193,20 +186,18 @@
           <div class="modal modal-auth">
             <section class="modal-content">
                       <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
-                       <button type="button" class="close"><img src="images/cross.svg" alt="close"></button>
+                       <button type="button" class="close"></button>
                        <label for="start">Дата заезда:</label><input type="date" id="start" name="trip-start" value="2023-07-22" min="2023-01-01" max="2024-01-01">
                         <div class="calendar"></div> <p>Мы не можем отправить вас в прошлое.</p>
                       <label for="start">Дата выезда:</label><input type="date" id="start" name="trip-start" value="2023-07-22" min="2023-01-01" max="2024-01-01">
                         <div class="calendar"></div> <p>На эти даты есть свободные номера. Пока есть.</p>
                         <label for="age">Взрослые:</label>
-                          <input type="number" step="1" min="1" max="100" value="10" id="age" name="age">
+                          <input type="number" step="1" min="1" max="99" value="2" id="age" name="age">
                         <label for="age">Дети:</label>
-                         <input type="number" step="1" min="1" max="100" value="10" id="age" name="age">
+                         <input type="number" step="1" min="1" max="99" value="2" id="age" name="age">
                     <p>
-                        <button type="submit">Найти</button>
+                        <button class="search-button" type="submit">Найти</button>
                     </p>
-          </a>
-         </li>
         </section>
        </div>
      </div>
