--- a/catalog.html
+++ b/catalog.html
@@ -100,6 +100,7 @@
              <button class="reset-button" type="reset">сбросить</button>
            </div>
           </form>
+          </section>
 
 <!-- Поиск конец формы -->
 
@@ -205,12 +206,13 @@
 <!-- Начало формы подписки -->
 
   <section class="subscribe">
-    <form action="https://echo.htmlacademy.ru">
-      <div class="subscribe-form">
     <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-      <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-      <input type="email" placeholder="Ваш e-mail" name="email"><button class="button-blue" type="submit">Подписаться</button>
-      </div>
+      <p class="subtitle">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <form action="https://echo.htmlacademy.ru">
+        <div class="subscribe-form">
+        <input type="email" placeholder="Ваш e-mail" name="email"><button class="button-blue" type="submit">Подписаться</button>
+     <button class="button-blue" type="submit">Подписаться</button>
+    </div>
     </form>
   </section>
   </main>
