--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="page-container">
     <header class="page-header">
-       <a href="#"><img src="images/logo.svg" width="120" height="55" alt="logo."></a>
+       <a href="#" class="logo-sedona"><img src="images/logo.svg" width="140" height="55" alt="logo."></a>
 
       <!-- Начало навигации -->
 
@@ -61,10 +61,10 @@
           <section class="text-sedona">
         <div class="welcome">
         <img src="images/welcome.svg" width="458" height="352" alt="welcome">
-        <div class="divider">
-          <h1 class="title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-          <p class="subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        </div>
+      </div>
+      <div class="divider">
+        <h1 class="title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <p class="subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </div>
     </section>
 
@@ -138,11 +138,11 @@
 
       <!-- Форма поиска конец  -->
 
-    <section class="subscribe-background">
-      <form action="https://echo.htmlacademy.ru">
-        <div class="subscribe-form">
+    <section class="subscribe-background subscribe">
       <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subtitle">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <form action="https://echo.htmlacademy.ru">
+        <div class="subscribe-form">
         <input type="email" placeholder="Ваш e-mail" name="email"><button class="button-blue" type="submit">Подписаться</button>
         </div>
       </form>
@@ -155,17 +155,17 @@
         <section class="footer-social">
           <ul class="footer-social-list">
             <li class="footer-social-item-vk">
-              <a class="button" href="#">
+              <a class="footer-social-link" href="#">
                 <span class="visually-hidden">VK</span>
                 </a>
             </li>
             <li class="footer-social-item-tg">
-              <a class="button" href="#">
+              <a class="footer-social-link" href="#">
                 <span class="visually-hidden">Telegram</span>
                 </a>
             </li>
             <li class="footer-social-item-yt">
-              <a class="button" href="#">
+              <a class="footer-social-link" href="#">
                 <span class="visually-hidden">YouTube</span>
               </a>
             </li>
@@ -176,8 +176,8 @@
 
         <section class="contacts">
           <a class="contacts-phone" href="tel:+78128121212">+7(812)812-12-12</a>
-          <a href="#"><img src="images/logo-htmlacademy.svg" width="115" height="33" alt="обложка."></a>
         </section>
+        <a href="#"><img src="images/logo-htmlacademy.svg" width="115" height="33" alt="обложка."></a>
       </footer>
 
         <!-- Модальное окно начало -->
