--- a/catalog.html
+++ b/catalog.html
@@ -10,10 +10,9 @@
 <!-- Конец шапки -->
 
   <body>
-    <div class="page-container">
+  <div class="page-container">
    <header class="page-header">
-    <a href="#"><img src="images/logo.svg" height="55" width="67" alt="Логотип.">
-    </a>
+    <a href="#" class="logo-sedona"><img src="images/logo.svg" width="140" height="55" alt="logo."></a>
 
 <!-- Начало навигации -->
 
@@ -34,7 +33,7 @@
 
 <ul class="navigation-list-buttons">
   <li class="navigation-item .search">
-    <a class="navigation-link-item" href="#search"><img src="images/search.svg">
+    <a class="navigation-link" href="#search"><img src="images/search.svg">
       <span class="visually-hidden">
         Поиск.
     </span>
@@ -43,14 +42,13 @@
 
   <!-- Конец модального окна -->
 
-  <li class="navigation-item .favourites">
-    <a class="navigation-link-item" href="#heart"><img src="images/heart.svg">
+  <li class="navigation-item .favorites">
+    <a class="navigation-link" href="#heart"><img src="images/heart.svg">
       <span class="visually-hidden">
         Избранное.
       </span>
     </a>
   </li>
-
   <li class="navigation-item-buttons">
     <button class="appointment-button" type="button">Хочу сюда!</button>
   </li>
@@ -78,19 +76,19 @@
 
           <form class="form-filter" action="https://echo.htmlacademy.ru">
            <div class="services-catalog">
-            <p>Инфраструктура</p>
+            <p class="infra">Инфраструктура</p>
              <input type="checkbox" name="pool" id="pool" checked><label for="pool">Бассейн</label>
              <input type="checkbox" name="parking" id="parking"><label for="parking">Парковка</label>
              <input type="checkbox" name="wifi" id="wifi"><label for="wifi">Wi-Fi</label>
           </div>
           <div>
-            <p>Тип Жилья:</p>
-             <input type="radio" name="house-type" value="hotel" id="hotel" checked><label for="hotel">Гостиница</label>
-             <input type="radio" name="house-type" value="motel" id="motel"><label for="motel">Мотель</label>
-             <input type="radio" name="house-type" value="apartaments" id="apartaments"><label for="apartaments">Апартаменты</label>
+            <p class="housetype">Тип Жилья:</p>
+             <div class="hotel"><input type="radio" name="house-type" value="hotel" id="hotel" checked><label for="hotel">Гостиница</label></div>
+             <div class="motel"><input type="radio" name="house-type" value="motel" id="motel"><label for="motel">Мотель</label></div>
+             <div class="apartaments"><input type="radio" name="house-type" value="apartaments" id="apartaments"><label for="apartaments">Апартаменты</label></div>
             </div>
             <div>
-            <p>Стоимость,₽</p>
+            <p class="price">Стоимость,₽:</p>
              <input type="number" name="appointment-price-from" id="appointment-task-from"><label for="appointment-task-from">от</label>
              <input type="number" name="appointment-price-to" id="appointment-task-to"><label for="appointment-task-to">до</label>
              <input type="range">
@@ -106,24 +104,30 @@
 
           <section>
             <div>
-        <h2>Найдено гостиниц:38</h2>
-        <select>
-          <option value="1">Сначала популярное</option>
-          <option value="2">Сначала дешевые</option>
-          <option value="3">Сначала дорогое</option>
-        </select>
+        <h2 class="searchresult">Найдено гостиниц:38</h2>
+
+          <div class="sorting-container">
+            <div class= "select sorting-type">
+              <select class="select-control" aria-label="Сортировка">
+                <option value="popular">Сначала популярные</option>
+                <option value="cheap">Сначала дешёвые</option>
+                <option value="expensive">Сначала дорогие</option>
+              </select>
+            </div>
+
+
           <ul class="views">
-          <li>
+          <li class="catalog-view-table">
             <a href="#" сlass="catalog-view-table">
               <span class="visually-hidden">Плитка</span>
             </a>
           </li>
-            <li>
+            <li class="catalog-view-slide">
               <a href="#" class="catalog-view-slide">
                 <span class="visually-hidden">Слайд</span>
                 </a>
             </li>
-            <li>
+            <li class="catalog-view-list">
               <a href="#" class="catalog-view-list">
               <span class="visually-hidden">Список</span>
               </a>
@@ -135,83 +139,87 @@
 <!-- Список гостиниц -->
 
           <section class="pages">
+
        <h2 class="visually-hidden">Список страниц</h2>
       <ul class="catalog-list">
       <li class="hotel-card-1">
-       <a href="#">
         <div>
         <img src="images/hotel-1.jpg" width="300" height="212" alt="Пейзаж.">
       </div>
-      <div><h3>Amara Resort & Spa</h3></div>
-      </a>
-       <p>Гостиница</p><p>От 4000 ₽</p>
+      <div><h3 class="hotel-name-1">Amara Resort & Spa</h3></div>
+       <div class="hotel-price"><p class="texthotel">Гостиница</p><p class="textprice">От 4000 ₽</p></div>
         <a href="#" class="button-brown">Подробнее</a>
         <a href="#" class="button-blue">В избранное</a>
-         <p>Рейтинг:8,5</p>
-      <img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
-      </li>
+        <br><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
+      <p class="text-rating">Рейтинг: 8,5</p>
+    </li>
        <li class="hotel-card-2">
-        <a href="#">
       <div>
         <img src="images/hotel-2.jpg" width="300" height="212" alt="Пейзаж.">
       </div>
         <div>
-        |<h3>Villas at Poco Diablo</h3>
+        <h3 class="hotel-name-2">Villas at Poco Diablo</h3>
       </div>
-      </a>
-        <p>Гостиница</p><p>От 5000 ₽</p>
+        <p class="texthotel">Гостиница</p><p class="textprice">От 5000 ₽</p>
         <a href="#" class="button-brown">Подробнее</a>
           <a href="#" class="button-green">В избранном</a>
-          <p>Рейтинг:9,2</p>
-          <img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
-       </li>
-
+          <br><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
+          <p class="text-rating">Рейтинг: 9,2</p>
+        </li>
        <li class="hotel-card-3">
-        <a href="#">
           <div>
           <img src="images/hotel-3.jpg" width="300" height="212" alt="Пейзаж."></div>
-        <div><h3>Desert Quail Inn</h3></div>
-        </a>
-         <p>Гостиница</p><p>От 2500 ₽</p>
+        <div><h3 class="hotel-name-3">Desert Quail Inn</h3></div>
+         <p class="texthotel">Гостиница</p><p class="textprice">От 2500 ₽</p>
          <a href="#" class="button-brown">Подробнее</a>
           <a href="#" class="button-blue">В избранное</a>
-          <p>Рейтинг:6,9</p>
-          <img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
+          <br><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
+          <p class="text-rating">Рейтинг: 6,9</p>
       </li>
-
       <li class="hotel-card-4">
-        <a href="#">
           <div>
           <img src="images/hotel-4.jpg" width="300" height="212" alt="Пейзаж."></div>
-       <div><h3>GreenTree Inn</h3></div>
-      </a>
-        <p>Гостиница</p><p>От 1500 ₽</p>
+       <div><h3 class="hotel-name-4">GreenTree Inn</h3></div>
+        <p class="texthotel">Гостиница</p><p class="textprice">От 1500 ₽</p>
         <a href="#" class="button-brown">Подробнее</a>
         <a href="#" class="button-blue">В избранное</a>
-         <p>Рейтинг:5,0</p>
-         <img src="images/star-3.svg"><img src="images/star-3.svg">
+         <br><img src="images/star-3.svg"><img src="images/star-3.svg">
+         <p class="text-rating">Рейтинг: 5,0</p>
         </li>
         </ul>
 
-         <ul class="pagination">
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><span>...</span></li>
-        <li><a href="#">10</a></li>
-      </ul>
-       </section>
+          <div class="pagination-container">
+          <ul class="pagination">
+            <li class="pagination-item">
+              <a class="pagination-link pagination-current">1</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">2</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">3</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">4</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">...</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">10</a>
+            </li>
+          </ul>
+        </div>
+    </section>
 
 <!-- Начало формы подписки -->
 
   <section class="subscribe">
     <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-      <p class="subtitle">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <p class="subtitle">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
       <form action="https://echo.htmlacademy.ru">
         <div class="subscribe-form">
         <input type="email" placeholder="Ваш e-mail" name="email"><button class="button-blue" type="submit">Подписаться</button>
-     <button class="button-blue" type="submit">Подписаться</button>
     </div>
     </form>
   </section>
@@ -223,17 +231,17 @@
   <section class="footer-social">
     <ul class="footer-social-list">
       <li class="footer-social-item-vk">
-        <a class="button" href="#">
+        <a class="footer-social-link" href="#">
           <span class="visually-hidden">VK</span>
           </a>
       </li>
       <li class="footer-social-item-tg">
-        <a class="button" href="#">
+        <a class="footer-social-link" href="#">
           <span class="visually-hidden">Telegram</span>
           </a>
       </li>
       <li class="footer-social-item-yt">
-        <a class="button" href="#">
+        <a class="footer-social-link" href="#">
           <span class="visually-hidden">YouTube</span>
         </a>
       </li>
@@ -242,10 +250,8 @@
 
 <!-- Список контакты -->
 
-<section class="contacts">
-   <a class="contacts-phone" href="tel:+78128121212">+7(812)-12-12-12</a>
-    <a href="logo"><img src="images/logo-htmlacademy.svg" width="115" height="33" alt="Логотип."></a>
-</section>
+<section class="contacts"><a class="contacts-phone" href="tel:+78128121212">+7(812)812-12-12</a></section>
+<a href="#"><img src="images/logo-htmlacademy.svg" width="115" height="33" alt="обложка."></a>
   </footer>
 </div>
  </body>
