--- a/catalog.html
+++ b/catalog.html
@@ -142,7 +142,7 @@
 
        <h2 class="visually-hidden">Список страниц</h2>
       <ul class="catalog-list">
-      <li class="hotel-card-1">
+      <li class="hotel-card">
         <div>
         <img src="images/hotel-1.jpg" width="300" height="212" alt="Пейзаж.">
       </div>
@@ -153,34 +153,34 @@
         <br><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
       <p class="text-rating">Рейтинг: 8,5</p>
     </li>
-       <li class="hotel-card-2">
+       <li class="hotel-card">
       <div>
         <img src="images/hotel-2.jpg" width="300" height="212" alt="Пейзаж.">
       </div>
         <div>
         <h3 class="hotel-name-2">Villas at Poco Diablo</h3>
       </div>
-        <p class="texthotel">Гостиница</p><p class="textprice">От 5000 ₽</p>
+      <div class="hotel-price"><p class="texthotel">Гостиница</p><p class="textprice">От 5000 ₽</p></div>
         <a href="#" class="button-brown">Подробнее</a>
           <a href="#" class="button-green">В избранном</a>
           <br><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
           <p class="text-rating">Рейтинг: 9,2</p>
         </li>
-       <li class="hotel-card-3">
+       <li class="hotel-card">
           <div>
           <img src="images/hotel-3.jpg" width="300" height="212" alt="Пейзаж."></div>
         <div><h3 class="hotel-name-3">Desert Quail Inn</h3></div>
-         <p class="texthotel">Гостиница</p><p class="textprice">От 2500 ₽</p>
+        <div class="hotel-price"><p class="texthotel">Гостиница</p><p class="textprice">От 2500 ₽</p></div>
          <a href="#" class="button-brown">Подробнее</a>
           <a href="#" class="button-blue">В избранное</a>
           <br><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
           <p class="text-rating">Рейтинг: 6,9</p>
       </li>
-      <li class="hotel-card-4">
+      <li class="hotel-card">
           <div>
           <img src="images/hotel-4.jpg" width="300" height="212" alt="Пейзаж."></div>
        <div><h3 class="hotel-name-4">GreenTree Inn</h3></div>
-        <p class="texthotel">Гостиница</p><p class="textprice">От 1500 ₽</p>
+       <div class="hotel-price"><p class="texthotel">Гостиница</p><p class="textprice">От 1500 ₽</p></div>
         <a href="#" class="button-brown">Подробнее</a>
         <a href="#" class="button-blue">В избранное</a>
          <br><img src="images/star-3.svg"><img src="images/star-3.svg">
