--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
      <link rel="stylesheet" href="styles/style.css">
-     <title>Sedona</title>
+     <title>Sedona-каталог</title>
   </head>
 
 <!-- Конец шапки -->
@@ -40,7 +40,7 @@
     </a>
   </li>
 
-  <!-- Конец модального окна -->
+<!-- Конец модального окна -->
 
   <li class="navigation-item .favorites">
     <a class="navigation-link" href="#heart"><img src="images/heart.svg">
@@ -76,25 +76,25 @@
 
           <form class="form-filter" action="https://echo.htmlacademy.ru">
            <div class="services-catalog">
-            <p class="infra">Инфраструктура</p>
-             <input type="checkbox" name="pool" id="pool" checked><label for="pool">Бассейн</label>
-             <input type="checkbox" name="parking" id="parking"><label for="parking">Парковка</label>
+            <h2 class="infra">Инфраструктура</h2>
+             <input type="checkbox" name="pool" id="pool" checked><label for="pool">Бассейн</label><br>
+             <input type="checkbox" name="parking" id="parking"><label for="parking">Парковка</label><br>
              <input type="checkbox" name="wifi" id="wifi"><label for="wifi">Wi-Fi</label>
           </div>
-          <div>
-            <p class="housetype">Тип Жилья:</p>
+            <div>
+            <h2 class="housetype">Тип Жилья:</h2>
              <div class="hotel"><input type="radio" name="house-type" value="hotel" id="hotel" checked><label for="hotel">Гостиница</label></div>
              <div class="motel"><input type="radio" name="house-type" value="motel" id="motel"><label for="motel">Мотель</label></div>
              <div class="apartaments"><input type="radio" name="house-type" value="apartaments" id="apartaments"><label for="apartaments">Апартаменты</label></div>
             </div>
             <div>
-            <p class="price">Стоимость,₽:</p>
+            <h2 class="price">Стоимость, ₽:</h2>
              <input type="number" name="appointment-price-from" id="appointment-task-from"><label for="appointment-task-from">от</label>
              <input type="number" name="appointment-price-to" id="appointment-task-to"><label for="appointment-task-to">до</label>
              <input type="range">
            </div>
             <div>
-             <button class="button-blue" type="submit">применить</button>
+             <button class="button-blue-submit" type="submit">применить</button>
              <button class="reset-button" type="reset">сбросить</button>
            </div>
           </form>
@@ -148,8 +148,8 @@
       </div>
       <div><h3 class="hotel-name-1">Amara Resort & Spa</h3></div>
        <div class="hotel-price"><p class="texthotel">Гостиница</p><p class="textprice">От 4000 ₽</p></div>
-        <a href="#" class="button-brown">Подробнее</a>
-        <a href="#" class="button-blue">В избранное</a>
+        <div class="buttons-catalog"><a href="#" class="button-brown">Подробнее</a>
+        <a href="#" class="button-blue">В избранное</a></div>
         <br><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
       <p class="text-rating">Рейтинг: 8,5</p>
     </li>
@@ -161,8 +161,8 @@
         <h3 class="hotel-name-2">Villas at Poco Diablo</h3>
       </div>
       <div class="hotel-price"><p class="texthotel">Гостиница</p><p class="textprice">От 5000 ₽</p></div>
-        <a href="#" class="button-brown">Подробнее</a>
-          <a href="#" class="button-green">В избранном</a>
+      <div class="buttons-catalog"><a href="#" class="button-brown">Подробнее</a>
+          <a href="#" class="button-green">В избранном</a></div>
           <br><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
           <p class="text-rating">Рейтинг: 9,2</p>
         </li>
@@ -171,8 +171,8 @@
           <img src="images/hotel-3.jpg" width="300" height="212" alt="Пейзаж."></div>
         <div><h3 class="hotel-name-3">Desert Quail Inn</h3></div>
         <div class="hotel-price"><p class="texthotel">Гостиница</p><p class="textprice">От 2500 ₽</p></div>
-         <a href="#" class="button-brown">Подробнее</a>
-          <a href="#" class="button-blue">В избранное</a>
+        <div class="buttons-catalog"><a href="#" class="button-brown">Подробнее</a>
+          <a href="#" class="button-blue">В избранное</a></div>
           <br><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
           <p class="text-rating">Рейтинг: 6,9</p>
       </li>
@@ -181,8 +181,8 @@
           <img src="images/hotel-4.jpg" width="300" height="212" alt="Пейзаж."></div>
        <div><h3 class="hotel-name-4">GreenTree Inn</h3></div>
        <div class="hotel-price"><p class="texthotel">Гостиница</p><p class="textprice">От 1500 ₽</p></div>
-        <a href="#" class="button-brown">Подробнее</a>
-        <a href="#" class="button-blue">В избранное</a>
+       <div class="buttons-catalog"><a href="#" class="button-brown">Подробнее</a>
+        <a href="#" class="button-blue">В избранное</a></div>
          <br><img src="images/star-3.svg"><img src="images/star-3.svg">
          <p class="text-rating">Рейтинг: 5,0</p>
         </li>
@@ -203,7 +203,7 @@
               <a class="pagination-link" href="#">4</a>
             </li>
             <li class="pagination-item">
-              <a class="pagination-link" href="#">...</a>
+              <a class="pagination-none" href="#">...</a>
             </li>
             <li class="pagination-item">
               <a class="pagination-link" href="#">10</a>
@@ -219,7 +219,7 @@
       <p class="subtitle">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
       <form action="https://echo.htmlacademy.ru">
         <div class="subscribe-form">
-        <input type="email" placeholder="Ваш e-mail" name="email"><button class="button-blue" type="submit">Подписаться</button>
+        <input type="email" placeholder="Ваш e-mail" name="email"><button class="button-blue-sub" type="submit">Подписаться</button>
     </div>
     </form>
   </section>
