--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Sedona-гостиницы</title>
+    <title>Sedona-главная</title>
   </head>
 
   <!-- Конец шапки -->
 
   <body>
     <div class="page-container">
-    <header class="page-header">
+    <header class="header">
        <a href="#" class="logo-sedona"><img src="images/logo.svg" width="140" height="55" alt="logo."></a>
 
       <!-- Начало навигации -->
@@ -71,28 +71,38 @@
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advantages-item">
+
             <li class="advantages-item-blue">
-              <div style>
+              <div class="advantages-card-1">
               <h3 class="advantages-title">Настоящий<br>городок</h3>
               <p class="advantages-description">Седона — не аттракцион для<br>туристов, там течёт своя<br>жизнь</p>
             </div>
               <img src="images/photo-1.jpg" width="800" height="385" alt="пейзаж.">
             </li>
+
             <li class="advantages-item-light">
+              <div class="advantages-card-2">
               <h3 class="advantages-title">Небольшая<br>площадь</h3>
               <p class="advantages-description">Все достопримечательности<br>находятся очень близко</p>
+              </div>
             </li>
+
             <li class="advantages-item-light-blue">
+              <div class="advantages-card-3">
               <h3 class="advantages-title">Красивая<br>дорога</h3>
               <p class="advantages-description">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!</p>
             </li>
+
             <li class="advantages-item-light-blue-2">
+              <div class="advantages-card-4">
               <h3 class="advantages-title">Мало<br>туристов</h3>
               <p class="advantages-description">Большинство едет в Гранд<br>Каньон и толпится там</p>
+            </div>
             </li>
+
             <li class="advantages-item-blue">
               <img src="images/photo-2.jpg" width="800" height="385" alt="пейзаж.">
-              <div style>
+              <div class="advantages-card-5">
               <h3 class="advantages-title">Там есть<br>мост дьявола</h3>
               <p class="advantages-description">Да, по нему можно пройти!<br>Если вы осмелитесь,<br>разумеется</p>
               </div>
